Oppdatert pom.xml
For å unngå feilmelding på Byte Buddy ved kjøring av test av Service.